Updated for fixed-layer

--- a/css/sub.css
+++ b/css/sub.css
@@ -4,9 +4,9 @@
     top: 0;
     z-index: 9999;
     /* visibility: hidden; */
-    /* transition: visibility 0.5s ease, opacity 0.5s ease, transform 0.5s ease; */
+    transition: visibility 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
     /* opacity: 0; */
-    /* transform: translate(0,-150px); */
+    transform: translate(0,-150px);
     position: fixed;
 
 
