--- a/css/sub.css
+++ b/css/sub.css
@@ -6,7 +6,7 @@
     /* visibility: hidden; */
     transition: visibility 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
     /* opacity: 0; */
-    transform: translate(0,-150px);
+    /* transform: translate(0,-150px); */
     position: fixed;
 
     box-shadow: 0 2px 2px #ccc;
