--- a/css/sub.css
+++ b/css/sub.css
@@ -207,16 +207,25 @@
     float: left;
     width: 502px;
 }
+
+
 .Bcoverwrap #divFlipImg {
     opacity: 1
 }
-
 
 .Bcoverwrap .cover .swiper_section {
     position: absolute;
     top: 0;
     opacity: 0;
-    
+}
+
+.Bcoverwrap .cover .swiper_section .swiper_wrapper {
+    transition: 0.5s;
+}
+
+.Bcoverwrap .cover .swiper_section .swiper_wrapper .swiper_item .imgbox{
+    border: 1px solid #ccc;
+    padding: 1rem;
 }
 
 .Bcoverwrap .cover {
@@ -232,6 +241,38 @@
 
 .Bcoverwrap .cover img {
     max-width: 502px;
+}
+
+#lastpic {
+    position: absolute;
+    z-index: 10;
+    background: rgba(245, 245, 245, 0.9);
+    text-align: center;
+    top: calc(50% - 75px);
+    left: calc(50% - 75px);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    font-size: 17px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    color: #333;
+    font-weight: bold;
+    line-height: 1.4;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    opacity: 0;
+
+    -webkit-transition: opacity 0.2s ease-in-out;
+    -moz-transition: opactiy 0.2s ease-in-out;
+    -ms-transition: opacity 0.2s ease-in-out;
+    -o-transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
 }
 
 
