Updated 알라딘 스페셜 kakao APIs

--- a/css/common.css
+++ b/css/common.css
@@ -1134,6 +1134,8 @@ ul, li {
     display: flex;
     transition-property: transform;
     box-sizing: content-box;
+
+    overflow: hidden;
 }
 
 
