--- a/css/common.css
+++ b/css/common.css
@@ -1138,15 +1138,17 @@ ul, li {
 
 }
 
-#w_eventbanner_type .swiper_section,
 #w_aladinerChoice_type .swiper_section,
 #w_monthBook_type .swiper_section,
 #w_aladinSpecial_type .swiper_section,
-#w_eventbanner_type .swiper_section
 {
     height: 324px !important;
 }
 
+#w_specialPrice_type .swiper_section {
+    height: 340px !important;
+
+}
 
 .swiper_item {
     width: 100%;
