Fixed css error

--- a/css/common.css
+++ b/css/common.css
@@ -1141,6 +1141,7 @@ ul, li {
 #w_aladinerChoice_type .swiper_section,
 #w_monthBook_type .swiper_section,
 #w_aladinSpecial_type .swiper_section,
+#jinnyWelcome_Back .swiper_section
 {
     height: 324px !important;
 }
