--- a/css/main.css
+++ b/css/main.css
@@ -843,10 +843,11 @@
     box-sizing: border-box;
     display: flex;
     align-items: flex-start;
-    margin-right: 11px;
-
+    margin-right: 5px;
+    margin-left: 5px;
     flex-shrink: 0;
 }
+
 
 .w_topic .swiper_item a {
     display: flex;
@@ -1114,6 +1115,7 @@
 /* -------------------------알라디너의 선택------------------------ */
 .w_booklist .cover {
     width: 180px;
+    margin-left: 30px !important;
 }
 
 .w_booklist .cover img {
