Updated for margin-right error

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@
     color: #fff;
 }
 /* 탭활성화 active 속성-------------------------- // */
-
+.welcome_top_content .swiper_item,
 .welcome_top_tab .swiper_item {
     line-height: 33px;
     color: #3C5980;
